- Use external API key

--- a/MemoryVectorStore-sample/MemoryVectorStore-sample.csproj
+++ b/MemoryVectorStore-sample/MemoryVectorStore-sample.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\MemoryVectorStore\MemoryVectorStore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="apikey.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
