Added sample book to project Added page references to output

--- a/MemoryVectorStore-sample/MemoryVectorStore-sample.csproj
+++ b/MemoryVectorStore-sample/MemoryVectorStore-sample.csproj
@@ -21,6 +21,9 @@
     <None Update="apikey.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Robinson-Crusoe-in-Levels-PDF.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
